# jobsim

./: INSTALL.md  MANIFEST.in  README.md  jobsim.config  jobsim_out.config  pyproject.toml  setup.py  test_jobs.json
.github/: copilot-instructions.md
doc/: sysarch.md
examples/configs/: default_config.json  jobsim_config_basic.json
src/: debug_config.py  event_queue.py  jobgen.py  jobsim.py  reference_sim.py  sim_config.py  sim_histogram.py  time_def.py  tmp.txt  workers_model.py
src/jobsim/: __init__.py  debug_config.py  job_secheduling_view.py  jobgen.py  jobsim.py  process_load_results.sh  sim_config.py  sim_histogram.py  time_def.py  workers_model.py
test_results/: test_results.xml
tests/: README.md  __init__.py  cfg_basic_20_req_per_hour.json  cfg_basic_jobs_1_stdby_worker.json  cfg_basic_workers_high_job_load.json  conftest.py  jobsim_config_basic.json  jobsim_config_max.json  jobsim_config_min_for_debug.json  jobsim_config_with_minimal_workers.json  latency.json  processing_duration.json  profile_simulation_detailed_files_20250911_114818.json  quick_test.sh  requirements-test.txt  run_cfg_basic_24h.txt  run_cfg_basic_jobs_1_stdby_worker_24h.txt  run_cfg_basic_workers_high_job_load_24h.txt  run_tests.sh  scenario1.json  scenario_24.json  scenario_24.trace  scenario_24_new.trace  trace_24_no_invoking.trace
tests/cli/: __init__.py  test_cli.py
tests/e2e/: __init__.py  test_simulation.py
tests/integration/: __init__.py  test_worker_pool.py
tests/performance/: __init__.py  test_scalability.py
tests/unit/: __init__.py  test_event_queue.py  (+2 more)
(+1 files in other folders)
