[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobsim"
version = "0.1.2"
description = "A discrete event simulation system for job execution"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Adi Sapir", email = "adi.sapir5@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
# No external dependencies - all modules are from Python standard library
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.scripts]
jobsim = "jobsim.jobsim:main"
jobgen = "jobsim.jobgen:main"
sim-config = "jobsim.sim_config:main"

[tool.setuptools.packages.find]
where = ["src"]
